k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: default
  annotations:
    kube-vip.io/loadbalancerIPs: 137.194.15.36,2a09:6847:fa10:2270::1538
spec:
  type: LoadBalancer
  selector:
    app: hermes
  loadBalancerClass: kube-vip.io/kube-vip-class
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
